--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "php"              : "^5.6",
         "pimple/pimple"    : "^3.0@dev",
         "composer/composer": "^1.0@dev",
-        "symfony/console"  : "2.*"
+        "symfony/console"  : "2.*",
+        "mikey179/vfsStream": "~1.5@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0@dev"
