--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,14 @@
     "name": "gabriel403/slim-api",
     "description": "Tool for generating slim api controllers/models",
     "require": {
-        "php"              : ">5.6",
-        "pimple/pimple"    : "^3.0@dev",
-        "symfony/console"  : "2.*",
-        "mikey179/vfsStream": "~1.5@dev"
+        "php": ">5.6",
+        "pimple/pimple": "3.*",
+        "symfony/console": "2.*",
+        "robmorgan/phinx": "0.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0@dev"
+        "phpunit/phpunit": "4.*",
+        "mikey179/vfsStream": "1.*"
     },
     "license": "MIT",
     "authors": [
