--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
-    "name": "gabriel403/slim-api",
+    "name": "slimphp-api/slim-api",
     "description": "Tool for generating slim api controllers/models",
     "require": {
         "php": ">5.6",
         "pimple/pimple": "3.*",
+        "slim/slim": "3.*-dev",
         "symfony/console": "2.*",
         "robmorgan/phinx": "0.*"
     },
