--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
-        "mikey179/vfsStream": "1.*"
+        "mikey179/vfsStream": "1.*",
+        "satooshi/php-coveralls": "^0.7.0@dev"
     },
     "license": "MIT",
     "authors": [
