--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
         "php": ">5.6",
         "pimple/pimple": "3.*",
         "symfony/console": "2.*",
-        "slimphp-api/slim-phinx": "dev-master",
-        "slim/slim": "3.*-dev"
+        "slimphp-api/slim-phinx": "*@dev",
+        "slim/slim": "3.*@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
@@ -20,7 +20,6 @@
             "email": "me@g403.co"
         }
     ],
-    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {"SlimApi\\": "src/"}
     },
