Move mvc config to separate module
Also change interface names, move tests, use prefer stable, made
GeneratorFactory and DependencyService more adaptable

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "pimple/pimple": "3.*",
         "symfony/console": "2.*",
         "slimphp-api/slim-phinx": "*@dev",
+        "slimphp-api/slim-mvc": "*@dev",
         "slim/slim": "3.*@dev"
     },
     "require-dev": {
