--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "keywords": ["slim","api","generator","slimapi"],
     "require": {
         "php": ">5.6",
-        "pimple/pimple": "3.*",
-        "symfony/console": "2.*",
+        "pimple/pimple": "^3.0",
+        "symfony/console": "^2.7",
         "slimphp-api/slim-phinx": "*@dev",
         "slimphp-api/slim-mvc": "*@dev",
-        "slim/slim": "3.*@dev"
+        "slim/slim": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
