--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "slim/slim": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*",
+        "phpunit/phpunit": "^5.1",
         "mikey179/vfsStream": "1.*",
         "satooshi/php-coveralls": "^0.7.0@dev"
     },
