--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
         "php": ">5.6",
         "pimple/pimple": "^3.0",
         "symfony/console": "^2.7",
-        "slimphp-api/slim-phinx": "*@dev",
-        "slimphp-api/slim-mvc": "*@dev",
+        "slimphp-api/slim-phinx": "0.1.*",
+        "slimphp-api/slim-mvc": "0.1.*",
         "slim/slim": "^3.0"
     },
     "require-dev": {
